--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
                     android:layout_centerVertical="true"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@null"
-                    android:tint="@color/black" />
+                    android:tint="@color/font_black" />
 
             <TextView
                     android:id="@+id/tv_bottomsheet_category_name"
@@ -67,7 +67,7 @@
                     android:text="@string/view_category"
                     android:textAlignment="center"
                     android:textAllCaps="true"
-                    android:textColor="@color/black"
+                    android:textColor="@color/font_black"
                     android:textSize="16sp"
                     tools:ignore="RelativeOverlap" />
 
@@ -82,7 +82,7 @@
                     android:contentDescription="@null"
                     android:padding="10dp"
                     android:src="@mipmap/ic_home"
-                    android:tint="@color/black" />
+                    android:tint="@color/font_black" />
 
             <ImageView
                     android:id="@+id/ivBlinkView"
@@ -132,7 +132,7 @@
                             android:text="@string/change_theme"
                             android:textAlignment="center"
                             android:textAllCaps="true"
-                            android:textColor="@color/black"
+                            android:textColor="@color/font_black"
                             android:textSize="12sp" />
 
                     <ImageView
