--- a/app/src/main/res/layout/toolbar_ui.xml
+++ b/app/src/main/res/layout/toolbar_ui.xml
@@ -3,41 +3,36 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"
                 android:minHeight="?attr/actionBarSize"
                 android:orientation="vertical">
+
+    <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:contentDescription="@null"
+            android:paddingEnd="8dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@mipmap/ic_left_arrow"
+            android:visibility="gone"
+            tools:ignore="RtlSymmetry" />
 
     <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/iv_back"
             android:ellipsize="end"
             android:maxEms="12"
             android:maxLines="1"
-            android:textColor="@color/white"
-            android:textSize="@dimen/toolbar_title"
-            tools:ignore="MissingPrefix"/>
-
-    <ImageView
-            android:id="@+id/iv_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:contentDescription="@null"
-            android:src="@mipmap/ic_menu"
-            android:visibility="visible" />
-
-    <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:contentDescription="@null"
-            android:src="@mipmap/ic_left_arrow"
-            android:tint="@color/white"
-            android:visibility="gone" />
-
+            android:layout_marginStart="10dp"
+            android:textColor="@color/font_black"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            tools:ignore="MissingPrefix"
+            tools:targetApi="jelly_bean" />
 </RelativeLayout>
