--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -73,7 +73,7 @@
 
     <!-- Main Activity -->
     <color name="bottom_sheet_background">#26272F</color>
-    <color name="dashboard">#e57373</color>
+    <color name="dashboard">#ff8a65</color>
     <color name="os">#f06292</color>
     <color name="sensor">#ba68c8</color>
     <color name="cpu">#9575cd</color>
