--- a/app/src/main/res/layout/fragment_graphics.xml
+++ b/app/src/main/res/layout/fragment_graphics.xml
@@ -27,11 +27,13 @@
             tools:context="com.quixom.apps.deviceinfo.fragments.GraphicsFragment">
 
         <TextView
-                android:id="@+id/tv_rom"
+                android:id="@+id/tv_graphics"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
                 android:paddingStart="20dp"
-                android:text="@string/ram"
+                android:text="@string/graphics"
                 android:textColor="@color/gpu_ram"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -40,228 +42,52 @@
 
 
         <android.support.v7.widget.CardView
+                android:id="@+id/cvGraphicsDataParent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:visibility="gone"
                 app:cardBackgroundColor="@color/card_view_bg"
-                custom:cardUseCompatPadding="true">
+                app:cardUseCompatPadding="true">
 
-            <LinearLayout
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvGraphicsData"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:orientation="vertical">
+                    android:scrollbars="none" />
 
-                <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="start"
-                        android:orientation="horizontal">
-
-
-                    <com.noble.activity.myandroid.ColorArcProgressBar
-                            android:id="@+id/arc_graphics_ram"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            app:back_color="#bac8d5"
-                            app:back_width="2dp"
-                            app:front_color1="@color/dashboard_arc_progress_bar_color_1"
-                            app:front_color2="@color/dashboard_arc_progress_bar_color_2"
-                            app:front_color3="@color/dashboard_arc_progress_bar_color_3"
-                            app:front_width="7dp"
-                            app:height="100dp"
-                            app:is_need_content="true"
-                            app:is_need_unit="true"
-                            app:max_value="100"
-                            app:string_unit="%"
-                            app:textColor="@color/font_black"
-                            app:textSize="40sp"
-                            app:total_engle="270"
-                            app:width="100dp" />
-
-                    <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center_vertical"
-                            android:orientation="vertical"
-                            android:paddingStart="30dp"
-                            tools:ignore="RtlSymmetry">
-
-                        <TextView
-                                android:id="@+id/tv_used_memory_name"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/used_memory"
-                                android:textColor="@color/secondary_text"
-                                android:textSize="14sp"
-                                tools:ignore="MissingPrefix"
-                                tools:targetApi="jelly_bean" />
-
-                        <TextView
-                                android:id="@+id/tv_used_memory_value"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="2dp"
-                                android:layout_toEndOf="@+id/tv_used_memory_name"
-                                android:text="@string/zeroMB"
-                                android:textColor="@color/primary_text"
-                                android:textSize="14sp"
-                                tools:ignore="MissingPrefix"
-                                tools:targetApi="jelly_bean" />
-
-                        <TextView
-                                android:id="@+id/tv_free_memory_name"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/tv_used_memory_name"
-                                android:layout_marginTop="8dp"
-                                android:text="@string/free"
-                                android:textColor="@color/secondary_text"
-                                android:textSize="14sp"
-                                tools:ignore="MissingPrefix"
-                                tools:targetApi="jelly_bean" />
-
-                        <TextView
-                                android:id="@+id/tv_free_memory_value"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/tv_used_memory_name"
-                                android:layout_marginStart="2dp"
-                                android:layout_marginTop="8dp"
-                                android:layout_toEndOf="@+id/tv_free_memory_name"
-                                android:text="@string/zeroMB"
-                                android:textColor="@color/primary_text"
-                                android:textSize="14sp"
-                                tools:ignore="MissingPrefix"
-                                tools:targetApi="jelly_bean" />
-
-
-                        <TextView
-                                android:id="@+id/tv_total_memory_name"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/tv_free_memory_name"
-                                android:layout_marginTop="8dp"
-                                android:text="@string/total"
-                                android:textColor="@color/secondary_text"
-                                android:textSize="14sp"
-                                tools:ignore="MissingPrefix"
-                                tools:targetApi="jelly_bean" />
-
-                        <TextView
-                                android:id="@+id/tv_total_memory_value"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/tv_free_memory_name"
-                                android:layout_marginStart="2dp"
-                                android:layout_marginTop="8dp"
-                                android:layout_toEndOf="@+id/tv_total_memory_name"
-                                android:text="@string/zeroMB"
-                                android:textColor="@color/primary_text"
-                                android:textSize="14sp"
-                                tools:ignore="MissingPrefix"
-                                tools:targetApi="jelly_bean" />
-
-                    </RelativeLayout>
-                </LinearLayout>
-
-                <TableLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginStart="10dp">
-
-                    <TableRow
-                            android:id="@+id/tvMemoryName"
-                            android:visibility="gone">
-
-                        <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="start"
-                                android:layout_weight=".4"
-                                android:text="@string/memory_type"
-                                android:textAlignment="center"
-                                android:textColor="@color/secondary_text"
-                                android:textSize="16sp"
-                                android:textStyle="bold"
-                                tools:ignore="RtlSymmetry" />
-
-                        <TextView
-                                android:id="@+id/tvMemoryValue"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight=".6"
-                                android:gravity="center_vertical"
-                                android:textAlignment="center"
-                                android:textColor="@color/primary_text"
-                                android:textSize="16sp"
-                                tools:ignore="MissingPrefix,RtlSymmetry" />
-                    </TableRow>
-
-                    <TableRow
-                            android:id="@+id/tvBandwidthName"
-                            android:visibility="gone">
-
-                        <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="start"
-                                android:layout_weight=".4"
-                                android:text="@string/bandwidth"
-                                android:textAlignment="center"
-                                android:textColor="@color/secondary_text"
-                                android:textSize="16sp"
-                                android:textStyle="bold"
-                                tools:ignore="RtlSymmetry" />
-
-                        <TextView
-                                android:id="@+id/tvBandwidthValue"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight=".6"
-                                android:gravity="center_vertical"
-                                android:textAlignment="center"
-                                android:textColor="@color/primary_text"
-                                android:textSize="16sp"
-                                tools:ignore="MissingPrefix,RtlSymmetry" />
-                    </TableRow>
-
-                    <TableRow
-                            android:id="@+id/tvChannelName"
-                            android:visibility="gone">
-
-                        <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="start"
-                                android:layout_weight=".4"
-                                android:text="@string/channels"
-                                android:textAlignment="center"
-                                android:textColor="@color/secondary_text"
-                                android:textSize="16sp"
-                                android:textStyle="bold"
-                                tools:ignore="RtlSymmetry" />
-
-                        <TextView
-                                android:id="@+id/tvChannelValue"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight=".6"
-                                android:gravity="center_vertical"
-                                android:textAlignment="center"
-                                android:textColor="@color/primary_text"
-                                android:textSize="16sp"
-                                tools:ignore="MissingPrefix,RtlSymmetry" />
-                    </TableRow>
-                </TableLayout>
-            </LinearLayout>
         </android.support.v7.widget.CardView>
+
+        <LinearLayout
+                android:id="@+id/llEmptyStateGraphics"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="50dp"
+                android:layout_marginTop="50dp"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+            <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center"
+                    android:contentDescription="@null"
+                    android:src="@drawable/ic_no_info" />
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/graphics_empty_screen"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="15sp"
+                    tools:ignore="MissingPrefix"
+                    tools:targetApi="jelly_bean" />
+        </LinearLayout>
+
 
     </LinearLayout>
 
