--- a/app/src/main/res/layout/fragment_app_info.xml
+++ b/app/src/main/res/layout/fragment_app_info.xml
@@ -80,7 +80,7 @@
                 android:weightSum="2">
 
             <android.support.v7.widget.CardView
-                    android:id="@+id/cardView1"
+                    android:id="@+id/settingsCardView"
                     app:cardBackgroundColor="@color/card_view_bg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -103,7 +103,7 @@
 
 
             <android.support.v7.widget.CardView
-                    android:id="@+id/cardView3"
+                    android:id="@+id/redirectCardView"
                     app:cardBackgroundColor="@color/card_view_bg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
