--- a/app/src/main/res/layout/fragment_apps.xml
+++ b/app/src/main/res/layout/fragment_apps.xml
@@ -34,6 +34,14 @@
                     app:queryHint="Search" />
         </android.support.v7.widget.CardView>
 
+        <ProgressBar
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/loadingProgressBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:visibility="gone"/>
+
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_apps_list"
                 android:layout_width="match_parent"
